classDiagram
    class PdfReportBuilder {
        <<Builder Pattern>>
        -Rectangle pageSize
        -float marginLeft
        -float marginRight
        -float marginTop
        -float marginBottom
        -PageSection header
        -PageSection footer
        -ReportSection body
        -boolean landscape
        +setPageSize(Rectangle pageSize) PdfReportBuilder
        +setOrientation(boolean landscape) PdfReportBuilder
        +setMargins(float left, float right, float top, float bottom) PdfReportBuilder
        +setHeader(PageSection header) PdfReportBuilder
        +setFooter(PageSection footer) PdfReportBuilder
        +setBody(ReportSection body) PdfReportBuilder
        +build(OutputStream outputStream) void
        -configureDocument() Document
        -createPdfWriter(Document document, OutputStream output) PdfWriter
        -attachPageEvents(PdfWriter writer) void
    }

    class HeaderFooterPageEvent {
        <<OpenPDF Page Event>>
        -PageSection header
        -PageSection footer
        -boolean showHeader
        -boolean showFooter
        +onEndPage(PdfWriter writer, Document document) void
        +onStartPage(PdfWriter writer, Document document) void
        -renderHeader(PdfContentByte canvas, Document document) void
        -renderFooter(PdfContentByte canvas, Document document) void
    }

    class PageSection {
        <<Functional Interface>>
        +render(Document document, PdfWriter writer) void
        +getWidth() float
        +getHeight() float
    }

    class ReportSection {
        <<Functional Interface>>
        +render(Document document, PdfWriter writer) void
        +getRequiredHeight() float
        +canFit(float availableHeight) boolean
    }

    class SampleReportService {
        <<Service Layer>>
        -PdfReportBuilder reportBuilder
        -Environment environment
        +generateSampleReport(OutputStream outputStream) void
        -createHeader() PageSection
        -createFooter() PageSection
        -createBody() ReportSection
        -addReportMetadata() void
    }

    class SampleReportController {
        <<REST Controller>>
        -SampleReportService sampleReportService
        +getSampleReport() ResponseEntity~Resource~
        -createResponseEntity(String filename) ResponseEntity~Resource~
    }

    PdfReportBuilder --> PageSection : uses
    PdfReportBuilder --> ReportSection : composes
    PdfReportBuilder --> HeaderFooterPageEvent : configures
    HeaderFooterPageEvent --> PageSection : renders
    SampleReportService --> PdfReportBuilder : uses
    SampleReportService --> PageSection : creates
    SampleReportService --> ReportSection : creates
    SampleReportController --> SampleReportService : calls

    note for PdfReportBuilder "Builder pattern para\nconstrucción flexible de PDFs\ncon OpenPDF"
    note for PageSection "Functional interface\npara renderizar headers/footers\ndinámicos en cada página"
    note for ReportSection "Functional interface\npara contenido principal del\nreporte con medición de altura"
    note for HeaderFooterPageEvent "Event handler de OpenPDF\npara procesar cada página\nautomáticamente"
    note for SampleReportService "Servicio que demuestra\nel uso del motor de reportes\npara generar PDFs completos"